# llm-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_viewer/: __init__.py  __main__.py  cli.py  config.py  profiles.py  registry.py  schema.py  server.py  settings.py
src/llm_viewer/adapters/: __init__.py  base.py  block_graph.py  decoder.py  model_graph.py  spec.py  utils.py
src/llm_viewer/static/: app.css  app.js  index.html
tests/: test_decoder_adapter.py  test_error_handling.py  test_server.py
