[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-viewer"
version = "0.1.0"
description = "Lightweight Hugging Face LLM structure graph generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110",
    "transformers>=4.40",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "isort>=5.13", "flake8>=7.0", "pre-commit>=3.7"]

[project.scripts]
llm_viewer = "llm_viewer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_viewer = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]
